--- a/Homepage.html
+++ b/Homepage.html
@@ -55,7 +55,7 @@
             <div style="height:30vh" class ="d-flex align-items-center pb-5">
               <div>  
                 <div class="card-body">
-                  <h3 class="reveal-class" style="letter-spacing: 1px;">JUSTICE IS FOR EVERYONE</h4>
+                  <h3 class="reveal-class" style="letter-spacing: 1px;"><b>JUSTICE IS FOR EVERYONE</b></h3>
                 </div>
               </div> 
             </div>
@@ -112,7 +112,7 @@
                     </div>
                     <div class="carousel-inner">
                       <div class="container-fluid bg-dblue d-flex justify-content-center pt-1" style="z-index: 1!important; position:absolute; top: 0%;">
-                        <h5 class="text-light">Our Partner Clinics</h5>
+                        <h3 class="text-light">Our Partner Clinics</h3>
                       </div>
                       <div class="carousel-item active">
                         <img 
@@ -120,7 +120,7 @@
                           class="d-block w-100"
                           alt="Sailboat 1"
                         />
-                        <div class="carousel-caption d-md-block bg-dblue px-1">
+                        <div class="carousel-caption d-md-block bg-dblue px-1 mb-3">
                           <p class="small-title">SMU Pro Bono Centre Legal Clinic</h6>
                           <p class="small-txt">The SMU Pro Bono Centre Legal Clinic is administered by the SMU Pro Bono Centre with the help of volunteer lawyers and SMU Law students.</p>
                           <a class="btn btn-secondary rounded-0 mb-1 btn-sm grow">Click to find out more!</a>
@@ -132,9 +132,9 @@
                           class="d-block w-100"
                           alt="Sailboat 2"
                         />
-                        <div class="carousel-caption d-md-block bg-dblue px-1">
+                        <div class="carousel-caption d-md-block bg-dblue px-1 mb-3">
                           <p class="small-title">Law Society of Singapore Pro Bono Services</p>
-                          <p class="small-txt">The Pro Bono Services Office of the Law Society of Singapore was established on 10 September 2007 with the mission to help bring free legal assistance to those in need in our community. </p>
+                          <p class="small-txt">The Pro Bono Services Office of the Law Society of Singapore was established with the mission to help bring free legal assistance to those in need in our community. </p>
                           <a class="btn btn-secondary rounded-0 mb-1 btn-sm grow">Click to find out more!</a>
                         </div>
                       </div>
@@ -144,9 +144,10 @@
                           class="d-block w-100"
                           alt="Sailboat 3"
                         />
-                        <div class="carousel-caption d-none d-md-block">
-                          <h5>Third slide label</h5>
-                          <p>Some placeholder text to describe the image.</p>
+                        <div class="carousel-caption d-md-block bg-dblue px-1 mb-3">
+                          <p class="small-title">AWARE Legal Clinic</p>
+                          <p class="small-txt">AWARE offers free legal clinic services for women for any of these issues: family law, family violence, Sharia Law and other personal issues. </p>
+                          <a class="btn btn-secondary rounded-0 mb-1 btn-sm grow">Click to find out more!</a>
                         </div>
                       </div>
                     </div>
@@ -175,8 +176,9 @@
           </div>
         </div>
 
+        <!--Footer-->
         <div class ="container-fluid break-container">
-          <div class="d-flex justify-content-end align-items-end mt-3 mx-4">
+          <div class="d-flex justify-content-end align-items-end mt-3 mx-0">
             <p class = "text-light">Proudly brought to you by Team Penteract.</p>
           </div>
         </div>
