--- a/pages/applicant-start.html
+++ b/pages/applicant-start.html
@@ -57,18 +57,35 @@
         </div>
     </div>
 
+
     <div class="container px-0 pb-2 pt-0 d-flex justify-content-between animate__animated animate__fadeIn" style="margin-top: 5vh; width: 80vw;">
 
-        <div class="bg-beige grow container p-0 d-flex justify-content-center align-items-center" style="height: 40vh;">
-            <p>New Case Application</p>
-        </div>
+        <a href="./clinic-select.html" class="block-link link-dark">
+            <div class="bg-beige grow container p-0 justify-content-center d-flex align-items-center flex-column" style="height: 40vh;">
+                <div class="d-flex justify-content-center">
+                    <img src="../pictures/contract.png" style="max-width: 8rem; height:auto; margin-bottom: 30px; margin-left: 30px;">
+                </div>
+                <div class="d-flex justify-content-center">
+                    <p>New Case Application</p>
+                </div>
+            </div>
+        </a>
         <div style="width: 20vh;"></div>
-        <div class="bg-beige grow container p-0 d-flex justify-content-center align-items-center" style="height: 40vh;">
-            <p>Case Updates</p>
-        </div>
+
+        <a href="#" class="block-link link-dark">
+            <div class="bg-beige grow container p-0 d-flex justify-content-center align-items-center flex-column" style="height: 40vh;">
+                <div class="d-flex justify-content-center">
+                    <img src="../pictures/chat.png" style="max-width: 8rem; height:auto; margin-bottom: 10px;">
+                </div>
+                <div class="d-flex justify-content-center">
+                    <p>Case Updates</p>
+                </div>
+            </div>
+        </a>
+
     </div>
 
-    <div class ="container-fluid break-container" style="position:absolute; bottom:0%;">
+    <div class ="container-fluid bg-dblue" style="position:absolute; bottom:0%;">
         <div class="d-flex justify-content-end align-items-end mt-3 px-4">
           <p class = "text-light">Proudly brought to you by Team Penteract.</p>
         </div>
