--- a/Homepage.html
+++ b/Homepage.html
@@ -61,11 +61,11 @@
             </div>
   
           </div>
-          <div class="col-md-6" style="height:60vh">
+          <div class="col-md-6" style="height:60vh;">
             <div class="reveal-class image-blurred-edge"></div>
           </div>
 
-          <div class = "col-md-4" style="height:30vh">
+          <div class = "col-md-4" style="height:30vh;">
             <div class="card-body w-100">
               <h4 class><br>Locate Advocate helps you find legal counsel for FREE.</br></h4>
               <a href="#" rel="grow" class="btn btn-lg btn-primary my-4 rounded-0 grow">Get Started ➤</a>
