--- a/pages/applicant-start.html
+++ b/pages/applicant-start.html
@@ -84,7 +84,7 @@
         </a>
 
     </div>
-
+    <!--Footer-->
     <div class ="container-fluid bg-dblue" style="position:absolute; bottom:0%;">
         <div class="d-flex justify-content-end align-items-end mt-3 px-4">
           <p class = "text-light">Proudly brought to you by Team Penteract.</p>
