--- a/pages/case-success.html
+++ b/pages/case-success.html
@@ -47,5 +47,23 @@
         </div>
     </div>
 
+    <!--Body-->
+
+    <div class="container bg-dblue p-3 d-flex align-items-center justify-content-center animate__animated animate__fadeIn rounded-corners" style="margin-top: 5vh; width: 80vw;">
+        <div class="d-flex flex-column">
+            <div class="d-flex justify-content-center"><h4><i><b class="text-light">Congratulations!</b></i></h4></div>
+            <div class="d-flex justify-content-center"><p class = "text-light"><i>Your case has been submitted.</i></p></div>
+            <div class="d-flex justify-content-center"><a href="applicant-start.html" class="text-light">Click to go back to dashboard.</a></div>
+        </div>
+    </div>
+
+    <!--Footer-->
+
+    <div class ="container-fluid bg-dblue" style="position:absolute; bottom:0%;">
+      <div class="d-flex justify-content-end align-items-end mt-3 px-4">
+        <p class = "text-light">Proudly brought to you by Team Penteract.</p>
+      </div>
+    </div>
+
   </body>
   </html>
