--- a/pages/clinic-select.html
+++ b/pages/clinic-select.html
@@ -58,19 +58,21 @@
       </div>
     </div>
 
-  <div class="bg-beige grow container mt-3 d-flex align-items-center justify-content-center rounded-corners flex-column" style="height: 35vh; width:80vw;">
-    <div class="container-fluid row">
-      <div class ="col-3"><img src="../pictures/gavel.jpg" class ="w-100 h-100"></div>
-      <div class = "col-9 d-flex align-items-start justify-content-center flex-column">
-        <div class="row"><h4>SMU Pro Bono Center</h4></div>
-        <div class="row"><p><b>Address:</b> Yong Pung How School of Law, Pro Bono Centre, 
-          55 Armenian Street, Basement 2
-          Singapore 179943</p></div>
-        <div class="row"><p><b>Response Time:</b> 3 working days</p></div>
-        <div class="row"><p><b>Next Appointment Availability:</b> 9 July 2022</p></div>
+  <a href="case-registration.html" class="block-link link-dark">
+    <div class="bg-beige grow container mt-3 d-flex align-items-center justify-content-center rounded-corners flex-column" style="height: 35vh; width:80vw;">
+      <div class="container-fluid row">
+        <div class ="col-3"><img src="../pictures/gavel.jpg" class ="w-100 h-100"></div>
+        <div class = "col-9 d-flex align-items-start justify-content-center flex-column">
+          <div class="row"><h4>SMU Pro Bono Center</h4></div>
+          <div class="row"><p><b>Address:</b> Yong Pung How School of Law, Pro Bono Centre, 
+            55 Armenian Street, Basement 2
+            Singapore 179943</p></div>
+          <div class="row"><p><b>Response Time:</b> 3 working days</p></div>
+          <div class="row"><p><b>Next Appointment Availability:</b> 9 July 2022</p></div>
+        </div>
       </div>
     </div>
-  </div>
+  </a>
 
   <div class="bg-beige grow container mt-3 d-flex align-items-center justify-content-center rounded-corners flex-column" style="height: 35vh; width:80vw;">
     <div class="container-fluid row">
