--- a/Homepage.html
+++ b/Homepage.html
@@ -31,7 +31,7 @@
         <a href="Homepage.html" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto text-dark text-decoration-none">
           <svg class="bi me-2" width="40" height="32"><use xlink:href="#bootstrap"/></svg>
           <img src = "pictures/laurels.png" style='width:50px;' class = "px-2">
-          <span class="fs-4"><h2 class = "font-weight-bold text-white">Locate Advocate</h2></span>
+          <span class="fs-4"><h1 class = "font-weight-bold text-white">Locate Advocate</h1></span>
         </a>
       </header>
     </div>
@@ -48,14 +48,14 @@
 
     <!-- Main Section -->
     <div class="arrow animated bounce"></div>
-    <div class="container pt-5 px-0">
-      <div class="container-fluid" style="height:20vh;">
+    <div class="container-fluid pt-5 px-0">
+      <div class="container-fluid w-75" style="height:20vh;">
         <div class="row" data-masonry='{"percentPosition": true }'>
           <div class="col-md-6">
             <div style="height:30vh" class ="d-flex align-items-center pb-5">
               <div>  
                 <div class="card-body">
-                  <h3 class="reveal-class" style="letter-spacing: 1px;"><b>JUSTICE IS FOR EVERYONE</b></h3>
+                  <h1 class="reveal-class" style="letter-spacing: 1px;"><b>JUSTICE IS FOR EVERYONE</b></h1>
                 </div>
               </div> 
             </div>
@@ -67,7 +67,7 @@
 
           <div class = "col-md-4" style="height:30vh;">
             <div class="card-body w-100">
-              <h4 class><br>Locate Advocate helps you find legal counsel for FREE.</br></h4>
+              <h2 class>Locate Advocate helps you find legal counsel for FREE.</h2>
               <a href="#" rel="grow" class="btn btn-lg btn-primary my-4 rounded-0 grow">Get Started ➤</a>
             </div>
           </div>
@@ -112,7 +112,7 @@
                     </div>
                     <div class="carousel-inner">
                       <div class="container-fluid bg-dblue d-flex justify-content-center pt-1" style="z-index: 1!important; position:absolute; top: 0%;">
-                        <h3 class="text-light">Our Partner Clinics</h3>
+                        <h1 class="text-light">Our Partner Clinics</h1>
                       </div>
                       <div class="carousel-item active">
                         <img 
