--- a/pages/applicant-start.html
+++ b/pages/applicant-start.html
@@ -33,7 +33,7 @@
           <a href="../Homepage.html" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto text-dark text-decoration-none">
             <svg class="bi me-2" width="40" height="32"><use xlink:href="#bootstrap"/></svg>
             <img src = "../pictures/laurels.png" style='width:50px;' class = "px-2">
-            <span class="fs-4"><h2 class = "font-weight-bold text-white">Locate Advocate</h2></span>
+            <span class="fs-4"><h1 class = "font-weight-bold text-white">Locate Advocate</h1></span>
           </a>
         </header>
     </div>
@@ -50,7 +50,7 @@
     
     <!-- Main Section -->
 
-    <div class="container bg-beige pb-0 pt-3 d-flex align-items-center justify-content-center animate__animated animate__fadeIn" style="margin-top: 5vh; width: 80vw;">
+    <div class="container bg-beige pb-0 pt-3 d-flex align-items-center justify-content-center animate__animated animate__fadeIn rounded-corners" style="margin-top: 5vh; width: 80vw;">
         <div class="d-flex flex-column">
             <div class="d-flex justify-content-center"><h4><i><b>Important Notice</b></i></h4></div>
             <div class="d-flex justify-content-center"><p><i>Each individual is entitled to one pro bono case per legal counsel centre, per lifetime.</i></p></div>
@@ -58,10 +58,10 @@
     </div>
 
 
-    <div class="container px-0 pb-2 pt-0 d-flex justify-content-between animate__animated animate__fadeIn" style="margin-top: 5vh; width: 80vw;">
+    <div class="container px-0 pb-2 pt-0 d-flex justify-content-between animate__animated animate__fadeIn " style="margin-top: 5vh; width: 80vw;">
 
         <a href="./clinic-select.html" class="block-link link-dark">
-            <div class="bg-beige grow container p-0 justify-content-center d-flex align-items-center flex-column" style="height: 40vh;">
+            <div class="bg-beige rounded-corners grow container p-0 justify-content-center d-flex align-items-center flex-column" style="height: 40vh;">
                 <div class="d-flex justify-content-center">
                     <img src="../pictures/contract.png" style="max-width: 8rem; height:auto; margin-bottom: 30px; margin-left: 30px;">
                 </div>
@@ -73,7 +73,7 @@
         <div style="width: 20vh;"></div>
 
         <a href="#" class="block-link link-dark">
-            <div class="bg-beige grow container p-0 d-flex justify-content-center align-items-center flex-column" style="height: 40vh;">
+            <div class="bg-beige rounded-corners grow container p-0 d-flex justify-content-center align-items-center flex-column" style="height: 40vh;">
                 <div class="d-flex justify-content-center">
                     <img src="../pictures/chat.png" style="max-width: 8rem; height:auto; margin-bottom: 10px;">
                 </div>
