--- a/pages/applicant-view-case.html
+++ b/pages/applicant-view-case.html
@@ -32,7 +32,7 @@
           <a href="../Homepage.html" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto text-dark text-decoration-none">
             <svg class="bi me-2" width="40" height="32"><use xlink:href="#bootstrap"/></svg>
             <img src = "../pictures/laurels.png" style='width:50px;' class = "px-2">
-            <span class="fs-4"><h2 class = "font-weight-bold text-white">Locate Advocate</h2></span>
+            <span class="fs-4"><h1 class = "font-weight-bold text-white">Locate Advocate</h1></span>
           </a>
         </header>
     </div>
@@ -67,7 +67,7 @@
 
       <a href="chat.html" class="block-link link-dark">
         <div class="d-flex justify-content-center m-5">  
-          <div><img src="../pictures/chat-gold.png" style="width: 25px; height: auto;"> <span><b><u>Chat with Student Assistant</u></b></span></div>
+          <div><img src="../pictures/chat-gold.png" style="width: 2vw; height: auto;"> <span><b><u>Chat with Student Assistant</u></b></span></div>
         </div>
       </a>
 
