--- a/pages/applicant-start.html
+++ b/pages/applicant-start.html
@@ -14,7 +14,7 @@
     href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
     />
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-    <title>Locate Advocate - Applicant Dashboard</title>
+    <title>Locate Advocate - Lawyer Login</title>
   </head>
 
   <body style="background-image:url(../pictures/website-bg.jpg);
@@ -61,7 +61,7 @@
     <div class="container px-0 pb-2 pt-0 d-flex justify-content-between animate__animated animate__fadeIn " style="margin-top: 5vh; width: 80vw;">
 
         <a href="./clinic-select.html" class="block-link link-dark">
-            <div class="bg-beige rounded-corners grow container p-0 justify-content-center d-flex align-items-center flex-column" style="height: 40vh;">
+            <div class="bg-beige rounded-corners grow p-0 justify-content-center d-flex align-items-center flex-column" style="height: 40vh;">
                 <div class="d-flex justify-content-center">
                     <img src="../pictures/contract.png" style="max-width: 8rem; height:auto; margin-bottom: 30px; margin-left: 30px;">
                 </div>
@@ -73,7 +73,7 @@
         <div style="width: 20vh;"></div>
 
         <a href="#" class="block-link link-dark">
-            <div class="bg-beige rounded-corners grow container p-0 d-flex justify-content-center align-items-center flex-column" style="height: 40vh;">
+            <div class="bg-beige rounded-corners grow p-0 d-flex justify-content-center align-items-center flex-column" style="height: 40vh;">
                 <div class="d-flex justify-content-center">
                     <img src="../pictures/chat.png" style="max-width: 8rem; height:auto; margin-bottom: 10px;">
                 </div>
