--- a/pages/login-lawyer.html
+++ b/pages/login-lawyer.html
@@ -52,10 +52,10 @@
 
 <div class="container-fluid px-0 pb-2 pt-0 d-flex justify-content-between" style="margin-top: 5vh; width: 80vw;">
 
-    <a href="login.html" class="block-link link-dark" onclick="applicantLoad()">
-        <div class="bg-beige grow container p-0 justify-content-center d-flex align-items-center flex-column" style="height: 20vh;">
+    <a href="login.html" class="block-link link-dark">
+        <div class="bg-beige grow p-0 justify-content-center d-flex align-items-center flex-column mx-2" style="height: 20vh;">
             <div class="d-flex justify-content-center">
-                <img src="../pictures/client.png" style="max-width: 8rem; height:auto; margin-bottom: 10px;">
+                <img src="../pictures/client.png" style="max-width: 2rem; height:auto; margin-bottom: 10px;">
             </div>
             <div class="d-flex justify-content-center">
                 <p>Applicant</p>
@@ -63,12 +63,11 @@
         </div>
     </a>
 
-    <div style="width: 10vh;"></div>
 
-    <a href="login-SA.html" class="block-link link-dark" onclick="studentAssistantLoad()">
-        <div class="bg-beige grow container p-0 d-flex justify-content-center align-items-center flex-column" style="height: 20vh;">
+    <a href="login-SA.html" class="block-link link-dark">
+        <div class="bg-beige grow p-0 d-flex justify-content-center align-items-center flex-column mx-2" style="height: 20vh;">
             <div class="d-flex justify-content-center">
-                <img src="../pictures/student.png" style="max-width: 8rem; height:auto; margin-bottom: 10px;">
+                <img src="../pictures/student.png" style="max-width: 2rem; height:auto; margin-bottom: 10px;">
             </div>
             <div class="d-flex justify-content-center">
                 <p>Student Assistant</p>
@@ -76,12 +75,11 @@
         </div>
     </a>
 
-    <div style="width: 10vh;"></div>
 
     <a href="login-lawyer.html" class="block-link link-dark">
-        <div class="bg-beige grow container p-0 d-flex justify-content-center align-items-center flex-column" style="height: 20vh;">
+        <div class="bg-beige grow p-0 d-flex justify-content-center align-items-center flex-column mx-2" style="height: 20vh;">
             <div class="d-flex justify-content-center">
-                <img src="../pictures/lawyer.png" style="max-width: 6rem; height:auto; margin-bottom: 10px;">
+                <img src="../pictures/lawyer.png" style="max-width: 2rem; height:auto; margin-bottom: 10px;">
             </div>
             <div class="d-flex justify-content-center">
                 <p>Lawyer</p>
@@ -121,6 +119,7 @@
 				<input type="text" placeholder="Email">
                 <input type="text" placeholder="Name">
                 <input type="text" placeholder="Company">
+                <input type="text" placeholder="Position">
 				<input type="password" placeholder="Password">
 				<input type="password" placeholder="Confirm Password">
 				<input type="button" value="Register">
