--- a/pages/login-SA.html
+++ b/pages/login-SA.html
@@ -109,20 +109,20 @@
 		<div class="white-panel">
 			<div class="login-show">
 				<h2>LOGIN AS ASSISTANT</h2>
-				<input type="text" placeholder="Email">
-				<input type="password" placeholder="Password">
-				<input type="button" value="Login">
+				<input type="text" id="emailSAL" placeholder="Email">
+				<input type="password" id="passwordSAL" placeholder="Password">
+				<input type="button" value="Login" onclick="loginSA()">
 				<a href="" class="link-dark">Forgot password?</a>
 			</div>
 			<div class="register-show mb-3">
 				<h2>REGISTER AS ASSISTANT</h2>
-				<input type="text" placeholder="Email">
-                <input type="text" placeholder="Name">
-                <input type="text" placeholder="Educational Institution">
-                <input type="text" placeholder="Year of Study">
-				<input type="password" placeholder="Password">
+				<input type="text" id="emailSA" placeholder="Email">
+                <input type="text" id="nameSA" placeholder="Name">
+                <input type="text" id="school" placeholder="Educational Institution">
+                <input type="text" id="yearOfStudy" placeholder="Year of Study">
+				<input type="password" id="passwordSA" placeholder="Password">
 				<input type="password" placeholder="Confirm Password">
-				<input type="button" value="Register">
+				<input type="button" value="Register" onclick="registerSA()">
 			</div>
 		</div>
 	</div>
@@ -132,6 +132,36 @@
 
 
 <script>
+
+function loginSA(){
+    //API
+    var email = document.getElementById("emailSAL");
+    var password = document.getElementById("passwordSAL");
+    if(true){
+        window.sessionStorage;
+        sessionStorage.setItem("name", "John Tan");
+        sessionStorage.setItem("userID", 22222);
+        sessionStorage.setItem("caseID", 21298);
+        sessionStorage.setItem("userType", "studentAssistant");
+    }
+}
+
+function registerSA(){
+    var email = document.getElementById("emailSA").value;
+    var name = document.getElementById("nameSA").value;
+    var school = document.getElementById("school").value;
+    var yearOfStudy = document.getElementById("yearOfStudy").value;
+    var password = document.getElementById("passwordSA").value;
+    window.sessionStorage;
+    sessionStorage.setItem("email", email);
+    sessionStorage.setItem("name", name);
+    sessionStorage.setItem("school", school);
+    sessionStorage.setItem("yearOfStudy", yearOfStudy);
+    sessionStorage.setItem("password", password);
+    //API
+}
+
+
 $(document).ready(function(){
     $('.login-info-box').fadeOut();
     $('.login-show').addClass('show-log-panel');
@@ -163,6 +193,9 @@ $('.login-reg-panel input[type="radio"]').on('change', function() {
 
 </script>
 
+<script src="https://unpkg.com/scrollreveal"></script>
+<script src="animations.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/masonry-layout@4.2.2/dist/masonry.pkgd.min.js" integrity="sha384-GNFwBvfVxBkLMJpYMOABq3c+d3KnQxudP/mGPkzpZSTYykLBNsZEnG2D9G/X/+7D" crossorigin="anonymous" async></script>
 </body>
 
 </html>
