--- a/pages/login.html
+++ b/pages/login.html
@@ -109,20 +109,20 @@
 		<div class="white-panel">
 			<div class="login-show">
 				<h2>LOGIN AS CLIENT</h2>
-				<input type="text" placeholder="Email">
-				<input type="password" placeholder="Password">
-				<input type="button" value="Login">
+				<input id="emailClientL" type="text" placeholder="Email">
+				<input id="passwordClientL" type="password" placeholder="Password">
+				<input type="button" value="Login" onclick="loginClient()">
 				<a href="" class="link-dark">Forgot password?</a>
 			</div>
 			<div class="register-show mb-3">
 				<h2>REGISTER AS CLIENT</h2>
-				<input type="text" placeholder="Email">
-                <input type="text" placeholder="Name">
-                <input type="text" placeholder="Birthday (YYYY-MM-DD)">
-                <input type="text" placeholder="Last 4 characters of NRIC">
-				<input type="password" placeholder="Password">
-				<input type="password" placeholder="Confirm Password">
-				<input type="button" value="Register">
+				<input type="text" placeholder="Email" id="emailClient">
+                <input type="text" placeholder="Name" id="nameClient">
+                <input type="text" placeholder="Birthday (YYYY-MM-DD)" id="bdayClient">
+                <input type="text" placeholder="Last 4 characters of NRIC" id="nricClient">
+				<input type="password" placeholder="Password" id="passwordClient">
+				<input type="password" placeholder="Confirm Password" id="repeatPasswordClient">
+				<input type="button" value="Register" onclick="registerClient()">
 			</div>
 		</div>
 	</div>
@@ -132,6 +132,55 @@
 
 
 <script>
+
+function loginClient(){
+    var email = document.getElementById("emailClientL").value;
+    var password = document.getElementById("passwordClientL").value;
+    if(true){
+        window.sessionStorage;
+        sessionStorage.setItem("name", "John Tan").value;
+        sessionStorage.setItem("userID", 22222).value;
+        sessionStorage.setItem("caseID", 21298).value;
+        sessionStorage.setItem("userType", "client").value;
+        //API
+    }
+}
+
+function registerClient(){
+    var email = document.getElementById("emailClient").value;
+    var name = document.getElementById("nameClient").value;
+    var bday = document.getElementById("bdayClient").value;
+    var nric = document.getElementById("nricClient").value;
+    console.log(email);
+    var password = document.getElementById("passwordClient").value;
+    window.sessionStorage;
+    sessionStorage.setItem("email", email);
+    sessionStorage.setItem("name", name);
+    sessionStorage.setItem("bday", bday);
+    sessionStorage.setItem("nric", nric);
+    sessionStorage.setItem("password", password);
+
+    var settings = {
+    "url": "http://127.0.0.1:8100/create_new_user_client",
+    "method": "POST",
+    "timeout": 0,
+    "headers": {
+        "Content-Type": "application/json"
+    },
+    "data": JSON.stringify({
+        "email": email,
+        "name": name,
+        "bdae": bday,
+        "last4_nric": nric,
+        "password": password
+    }),
+    };
+
+    $.ajax(settings).done(function (response) {
+    console.log(response);
+    });
+}
+
 $(document).ready(function(){
     $('.login-info-box').fadeOut();
     $('.login-show').addClass('show-log-panel');
@@ -162,6 +211,9 @@ $('.login-reg-panel input[type="radio"]').on('change', function() {
 
 
 </script>
+
+<script src="https://unpkg.com/scrollreveal"></script>
+<script src="https://cdn.jsdelivr.net/npm/masonry-layout@4.2.2/dist/masonry.pkgd.min.js" integrity="sha384-GNFwBvfVxBkLMJpYMOABq3c+d3KnQxudP/mGPkzpZSTYykLBNsZEnG2D9G/X/+7D" crossorigin="anonymous" async></script>
 
 </body>
 
