--- a/pages/SA-case-overview.html
+++ b/pages/SA-case-overview.html
@@ -68,7 +68,7 @@
         <div class="col-6">
             <a href="chat.html" class="block-link link-dark">
                 <div class="d-flex justify-content-center m-5">  
-                    <div><img src="../pictures/chat-gold.png" style="width: 2vw; height: auto;"> <span><b><u>Chat with Student Assistant</u></b></span></div>
+                    <div><img src="../pictures/chat-gold.png" style="width: 2vw; height: auto;"> <span><b><u>Chat with Client</u></b></span></div>
                 </div>
             </a>
         </div>
